# faxbella

./: .env.example  .gitignore  CLAUDE.md  README.md  middleware.ts  open-next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  wrangler.toml
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
app/dashboard/: layout.tsx  page.tsx
app/features/: page.tsx
app/how-it-works/: page.tsx
app/login/: page.tsx
app/pricing/: layout.tsx  page.tsx
app/signup/: page.tsx
components/: dashboard-sidebar.tsx  dashboard-topbar.tsx  marketing-footer.tsx  marketing-header.tsx  recipient-form.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  (+9 more)
convex/: coverPage.ts  crons.ts  customers.ts  documentLibrary.ts  faxRouting.ts  fileAccess.ts  http.ts  inboundFaxes.ts  notifications.ts  outboundFax.ts  passkeys.ts  r2.ts  recipients.ts  schema.ts  stripe.ts  whop.ts  workflows.ts
docs/: 01-vision.md  02-problem.md  03-customer.md  04-solution.md  05-features.md  06-pricing.md  07-ux.md  08-tech.md  09-security.md  10-legal.md  11-metrics.md  12-launch.md  13-sales.md  14-ops.md  15-prod-readiness.md  16-decisions.md  BUILD_PLAN.md  FAXBELLA_STRATEGY.html  projectchatandprompts.md  projectreflog.md
hooks/: use-dashboard.ts  use-passkey.ts  use-session-sync.ts
infra/: set-env.sh  set-prod-env.sh  update-env-local.sh
infra/faxbot/python_mcp/: Dockerfile.sse  http_server.py  pyproject.toml  requirements.txt  server.py  stdio_server.py
lib/: constants.ts  stripe.ts  utils.ts
public/: robots.txt
(+148 files in other folders)
