[build-system]
requires = ["setuptools>=66", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faxbot-mcp"
version = "1.0.0"
description = "Faxbot MCP servers (Python): stdio, HTTP, SSE"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "David Montgomery", email = "dmontg@gmail.com" }
]
keywords = ["mcp", "fax", "faxbot", "sse", "streamable-http"]
dependencies = [
  "mcp>=1.13.1",
  "uvicorn>=0.30.6",
  "starlette>=0.36.3",
  "python-jose>=3.3.0",
  "httpx>=0.27.2",
]

[project.urls]
Homepage = "https://github.com/DMontgomery40/Faxbot"
Issues = "https://github.com/DMontgomery40/Faxbot/issues"

[project.scripts]
faxbot-mcp-py-stdio = "stdio_server:main"
faxbot-mcp-py-http = "http_server:main"
faxbot-mcp-py-sse = "server:main"
